增加长度控制

--- a/Forum.Web/Views/Account/Register.cshtml
+++ b/Forum.Web/Views/Account/Register.cshtml
@@ -12,19 +12,19 @@
                 <div class="form-group">
                     <label for="accountName" class="col-sm-2 control-label">账号</label>
                     <div class="col-sm-6">
-                        <input type="text" id="accountName" class="form-control" ng-model="newAccount.accountName" />
+                        <input type="text" maxlength="128" id="accountName" class="form-control" ng-model="newAccount.accountName" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-6">
-                        <input type="password" id="password" class="form-control" ng-model="newAccount.password" />
+                        <input type="password" maxlength="128" id="password" class="form-control" ng-model="newAccount.password" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2 control-label">密码确认</label>
                     <div class="col-sm-6">
-                        <input type="password" id="confirmPassword" class="form-control" ng-model="newAccount.confirmPassword" />
+                        <input type="password" maxlength="128" id="confirmPassword" class="form-control" ng-model="newAccount.confirmPassword" />
                     </div>
                 </div>
                 <div class="form-group">
