--- a/Forum.Web/Views/SectionAdmin/Index.cshtml
+++ b/Forum.Web/Views/SectionAdmin/Index.cshtml
@@ -42,7 +42,7 @@
                         <div class="form-group">
                             <label for="name" class="col-sm-2 control-label">名称</label>
                             <div class="col-sm-9">
-                                <input type="text" id="name" class="form-control" ng-model="newSection.name" />
+                                <input type="text" maxlength="128" id="name" class="form-control" ng-model="newSection.name" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -72,7 +72,7 @@
                         <div class="form-group">
                             <label for="name" class="col-sm-2 control-label">名称</label>
                             <div class="col-sm-9">
-                                <input type="text" id="name" class="form-control" ng-model="editingSection.name" />
+                                <input type="text" maxlength="128" id="name" class="form-control" ng-model="editingSection.name" />
                             </div>
                         </div>
                         <div class="form-group">
