--- a/Forum.Web/Views/Account/Login.cshtml
+++ b/Forum.Web/Views/Account/Login.cshtml
@@ -12,13 +12,13 @@
                 <div class="form-group">
                     <label for="accountName" class="col-sm-2 control-label">账号</label>
                     <div class="col-sm-6">
-                        <input type="text" id="accountName" class="form-control" ng-model="loginAccount.accountName" />
+                        <input type="text" maxlength="128" id="accountName" class="form-control" ng-model="loginAccount.accountName" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-6">
-                        <input type="password" id="password" class="form-control" ng-model="loginAccount.password" />
+                        <input type="password" maxlength="128" id="password" class="form-control" ng-model="loginAccount.password" />
                     </div>
                 </div>
                 <div class="form-group">
