--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -80,13 +80,13 @@
                         <div class="form-group">
                             <label for="editingPost_subject" class="col-sm-2 control-label">标题</label>
                             <div class="col-sm-9">
-                                <input type="text" id="editingPost_subject" class="form-control" ng-model="editingPost.subject" />
+                                <input type="text" maxlength="256" id="editingPost_subject" class="form-control" ng-model="editingPost.subject" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="editingPost_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="editingPost_body" class="form-control" ng-model="editingPost.body" maxlength="2000" rows="5"></textarea>
+                                <textarea id="editingPost_body" maxlength="1000" class="form-control" ng-model="editingPost.body" maxlength="2000" rows="5"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -116,7 +116,7 @@
                         <div class="form-group">
                             <label for="newReply_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="newReply_body" class="form-control" ng-model="newReply.body" maxlength="2000" rows="10"></textarea>
+                                <textarea id="newReply_body" maxlength="1000" class="form-control" ng-model="newReply.body" maxlength="2000" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -146,7 +146,7 @@
                         <div class="form-group">
                             <label for="editingReply_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="editingReply_body" class="form-control" ng-model="editingReply.body" maxlength="2000" rows="10"></textarea>
+                                <textarea id="editingReply_body" maxlength="1000" class="form-control" ng-model="editingReply.body" maxlength="2000" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
