--- a/Forum.Web/Views/Post/Index.cshtml
+++ b/Forum.Web/Views/Post/Index.cshtml
@@ -112,13 +112,13 @@
                         <div class="form-group">
                             <label for="subject" class="col-sm-2 control-label">标题</label>
                             <div class="col-sm-9">
-                                <input type="text" id="subject" class="form-control" ng-model="newPost.subject" />
+                                <input type="text" maxlength="256" id="subject" class="form-control" ng-model="newPost.subject" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="body" class="form-control" ng-model="newPost.body" maxlength="2000" rows="5"></textarea>
+                                <textarea id="body" maxlength="1000" class="form-control" ng-model="newPost.body" maxlength="2000" rows="5"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
