--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -14,7 +14,7 @@
                 <span style="margin-right:5px">@Model.CreatedOn</span>
                 @if (!string.IsNullOrEmpty(Model.AuthorName))
                 {
-                    @Html.ActionLink(Model.AuthorName, "index", new { authorId = Model.AuthorId }, new { target = "_blank" })
+                    @Html.ActionLink(Model.AuthorName, "index", new { authorId = Model.AuthorId })
                 }
             </div>
             <div class="pull-right">
@@ -45,7 +45,7 @@
                     <span style="margin-left:5px; margin-right:5px">@reply.CreatedOn</span>
                     @if (!string.IsNullOrEmpty(reply.AuthorName))
                     {
-                    @Html.ActionLink(reply.AuthorName, "index", new { authorId = reply.AuthorId }, new { target = "_blank" })
+                    @Html.ActionLink(reply.AuthorName, "index", new { authorId = reply.AuthorId })
                     }
                 </div>
                 <div class="pull-right">
@@ -86,7 +86,7 @@
                         <div class="form-group">
                             <label for="editingPost_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="editingPost_body" maxlength="1000" class="form-control" ng-model="editingPost.body" maxlength="2000" rows="5"></textarea>
+                                <textarea id="editingPost_body" maxlength="1000" class="form-control" ng-model="editingPost.body" rows="5"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -116,7 +116,7 @@
                         <div class="form-group">
                             <label for="newReply_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="newReply_body" maxlength="1000" class="form-control" ng-model="newReply.body" maxlength="2000" rows="10"></textarea>
+                                <textarea id="newReply_body" maxlength="1000" class="form-control" ng-model="newReply.body" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -146,7 +146,7 @@
                         <div class="form-group">
                             <label for="editingReply_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="editingReply_body" maxlength="1000" class="form-control" ng-model="editingReply.body" maxlength="2000" rows="10"></textarea>
+                                <textarea id="editingReply_body" maxlength="1000" class="form-control" ng-model="editingReply.body" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
