--- a/Forum.Web/Views/Shared/_CommonPartial.cshtml
+++ b/Forum.Web/Views/Shared/_CommonPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿<title>@ViewBag.Title</title>
 <meta name="keywords" content="ENode Forum CQRS DDD">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="ENode是一个读写分离的事件溯源框架">
 <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
