--- a/Forum.Web/Views/Shared/_SimpleLayout.cshtml
+++ b/Forum.Web/Views/Shared/_SimpleLayout.cshtml
@@ -1,9 +1,4 @@
-﻿@model Forum.Web.Models.LoginModel
-@{
-    ViewBag.Title = "ENode论坛-用户登录";
-    Layout = null;
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     @Html.Partial("_CommonPartial")
