--- a/Forum.Web/Views/Post/Create.cshtml
+++ b/Forum.Web/Views/Post/Create.cshtml
@@ -20,7 +20,7 @@
         @Html.Partial("_CreateOrUpdate", Model)
         <div class="form-group">
             <div class="">
-                <button class="btn btn-primary btn-lg" type="button" onclick="submitForm()">保存修改</button>
+                <button class="btn btn-primary btn-lg" type="button" onclick="submitForm()">提交帖子</button>
                 <a class="btn btn-primary btn-lg" href="javascript:document.referrer?location.href=document.referrer:history.go(-1);">返回</a>
             </div>
         </div>
