--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -48,7 +48,6 @@
     {
         <div class="row">
             <div class="col-lg-12">
-                <h2>回复：</h2>
                 @foreach (var reply in Model.Replies)
                 {
                     <div class="social-feed-box">
@@ -104,18 +103,18 @@
                 @Html.Hidden("ParentId")
                 @Html.Hidden("AuthorId")
                 <div class="form-group">
-                    <div class="">
-                        <button class="btn btn-primary btn-lg" 
-                                type="button" 
-                                onclick="reply.submit()" id="button"></button>
-                    </div>
-                </div>
-                <div class="form-group">
                     <textarea autofocus="" cols="20"
                               id="Body" name="Body"
                               placeholder="这里输入内容" 
                               rows="2" 
                               style="height: 100px;"></textarea>
+                </div>
+                <div class="form-group">
+                    <div class="">
+                        <button class="btn btn-primary btn-lg"
+                                type="button"
+                                onclick="reply.submit()" id="button"></button>
+                    </div>
                 </div>
             }
         </div>
@@ -168,7 +167,7 @@
                             case 'NewSub':
                             case 'New':
                                 url = '/Reply/Create';
-                                msg = '回帖帖子成功!点击马上跳转!';
+                                msg = '回帖成功!点击马上跳转!';
                                 break;
                             case 'Edit':
                                 url = '/Reply/Update';
@@ -216,7 +215,7 @@
                         case 'Edit':
                             this.method = 'Edit';
                            
-                            this.$button.text('编辑回复');
+                            this.$button.text('提交修改');
                             if (arguments[1]) {
                                 var $replyId = this.$replyId;
                                 var $parentId = this.$parentId;
