Upgrade enode to 2.8.1

--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -34,7 +34,7 @@
         }
     </div>
 
-    <div class="text-center article-title">
+    <div class="article-title">
         <h1>
             @MvcHtmlString.Create(Model.Subject)
         </h1>
