添加论坛的其余业务功能。

--- a/Forum.Web/Views/Shared/_Layout.cshtml
+++ b/Forum.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="zh" id="forum" ng-app="forum">
+<html lang="zh" id="forum">
 <head>
     @Html.Partial("_CommonPartial")
 </head>
