升级ENode, EQueue到最新版本。

--- a/Forum.Web/Views/Shared/_CommonPartial.cshtml
+++ b/Forum.Web/Views/Shared/_CommonPartial.cshtml
@@ -6,7 +6,7 @@
 
 <environment include="Development">
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/font-awesome.css" />
-    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/content/css/font-awesome.css" />
+    <link rel="stylesheet" href="~/content/css/style.css" />
     <link rel="stylesheet" href="~/lib/toastr/toastr.min.css" />
 </environment>
